# nodegeant4

./: README.md
Geant4/: CMakeLists.txt  server.cc
Geant4/include/: ActionInitialization.hh  ChamberParameterisation.hh  DetectorConstruction.hh  Detektor.hh  EventAction.hh  Geometry.hh  Gun.hh  Maths.hh  Particle.hh  ParticleSource.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  Simulation.hh  SteppingAction.hh  TrackerHit.hh
Geant4/src/: ActionInitialization.cc  ChamberParameterisation.cc  DetectorConstruction.cc  Detektor.cc  EventAction.cc  Geometry.cc  Maths.cc  Particle.cc  ParticleSource.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  Simulation.cc  SteppingAction.cc  TrackerHit.cc
api/: .env  U235.txt  app.js  cert.pem  debug0.txt  debug1.txt  debug12.txt  debug13.txt  debug18.txt  debug19.txt  debug2.txt  debug21.txt  debug4.txt  debug5.txt  debug6.txt  debug7.txt  debug8.txt  logs.txt  message0  message1  message10  message11  message12  message13  message14  message15  message16  message17  message18  message19  message2  message20  message22  message3  message4  message5  message7  message8  message9  package-lock.json  (+22 more)
api/dashboard/: asset-manifest.json  index.html
api/login/: asset-manifest.json  index.html  service-worker.js
api/models/: Geometry.js  (+7 more)
client/: package-lock.json  package.json
dashboard/: package-lock.json  package.json
database/: MaterialList.js  app.js  cone.stl  cylinder.stl  package-lock.json  package.json  sphere.stl  torus.stl  userModel.js
login/: package-lock.json  package.json
(+623 files in other folders)
